[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "watermarking-authenticity-mcp"
version = "1.0.0"
description = "Watermarking Authenticity tools for AI agents. Capabilities: check watermark compliance, generate c2pa manifest, detect ai content. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/watermarking-authenticity-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
watermarking_authenticity_mcp = "server:main"
